# frankensteins-qtile

./: .gitignore  README.md  base_config.toml  discord.toml.example  pyproject.toml  setup.cfg  setup.cfg.bak
.github/workflows/: python-package.yml  python-publish.yml
frankentile/: __init__.py  _discord.py  auto_desk.py  auto_desk_api.py  discord.py  discord_bot.py  discord_log.py  gen_keybinding_img.py  grafana.py  tmux.py  web.py  web_server.py
