[metadata]
name = frankentile
version = 0.1
description = a qtile configuration lib that is uterly unnessesarily overcomplicated.  
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/calacuda/
author = Calacuda
# author_email = ''
license = MIT License
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',  
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.11',
    ]

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    # libtmux
    flask
    discord
    # qtile
    aiohttp
