[metadata]
name = frankentile
version = 0.2
description = a qtile configuration lib that is unnessesary and over the top.  
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/calacuda/frankensteins-qtile"
author = Calacuda
# author_email = ''
license = MIT License
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',  
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    ]

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    # libtmux
    flask[async]
    discord
    # qtile
    aiohttp
    auto-tmux @ git+https://github.com/calacuda/auto-tmux
