[metadata]
name = frankentile
version = 0.3
description = a qtile configuration lib that is unnecessarily and over the top.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calacuda/frankensteins-qtile
author = Calacuda
# author_email = ''
requires_python = >=3.9
# license = MIT License


[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    # libtmux
    flask[async]
    discord
    # qtile
    aiohttp
    auto-tmux
